// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ThemeBreadcrumbs /> should render a ThemeBreadcrumbs from breadcrumbs 1`] = `
.c1 {
  position: relative;
  overflow: hidden;
}

.c1:before,
.c1:after {
  position: absolute;
  top: 0;
  bottom: 0;
  display: block;
  width: 4rem;
  opacity: 0;
  -webkit-transition: opacity 0.3s linear;
  transition: opacity 0.3s linear;
  content: "";
  pointer-events: none;
  background: radial-gradient( ellipse at center, white 15%, rgba(255,255,255,0) 80% );
}

.c1:before {
  left: -2rem;
}

.c1:after {
  right: -2rem;
}

.c2 {
  overflow-x: auto;
}

.c0 {
  overflow-x: auto;
  background: #e5f1fe;
}

.c3 {
  margin: 0;
  padding: 0;
  list-style-type: none;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-flow: nowrap;
  -ms-flex-flow: nowrap;
  flex-flow: nowrap;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 0.625rem 0;
}

.c4 {
  display: inline-block;
  padding: 0.625rem 1.25rem;
  white-space: nowrap;
}

.c5 {
  display: block;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  pointer-events: none;
}

.c6 {
  display: block;
  width: 1rem;
  color: #005994;
}

@media (max-width:600px) {
  .c3 {
    padding: 0.5rem 0;
  }
}

<div>
  <nav
    class="c0"
  >
    <div
      class="c1"
    >
      <div
        class="c2"
      >
        <ul
          class="c3"
        >
          <li
            class="c4"
          >
            <a
              href="/"
              title="Retour à l'accueil"
            >
              Accueil
            </a>
          </li>
          <li
            aria-hidden="true"
            class="c5"
          >
            <svg
              class="c6"
              fill="none"
              height="24"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <polyline
                points="13 17 18 12 13 7"
              />
              <polyline
                points="6 17 11 12 6 7"
              />
            </svg>
          </li>
          <li
            class="c4"
          >
            <a
              href="/themes/theme-1"
              title="Voir le theme theme 1"
            >
              theme 1
            </a>
          </li>
          <li
            aria-hidden="true"
            class="c5"
          >
            <svg
              class="c6"
              fill="none"
              height="24"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <polyline
                points="13 17 18 12 13 7"
              />
              <polyline
                points="6 17 11 12 6 7"
              />
            </svg>
          </li>
          <li
            class="c4"
          >
            <a
              href="/themes/theme-2"
              title="Voir le theme theme 2"
            >
              theme 2
            </a>
          </li>
        </ul>
      </div>
    </div>
  </nav>
</div>
`;

exports[`<ThemeBreadcrumbs /> should render a ThemeBreadcrumbs from theme 1`] = `
.c1 {
  position: relative;
  overflow: hidden;
}

.c1:before,
.c1:after {
  position: absolute;
  top: 0;
  bottom: 0;
  display: block;
  width: 4rem;
  opacity: 0;
  -webkit-transition: opacity 0.3s linear;
  transition: opacity 0.3s linear;
  content: "";
  pointer-events: none;
  background: radial-gradient( ellipse at center, white 15%, rgba(255,255,255,0) 80% );
}

.c1:before {
  left: -2rem;
}

.c1:after {
  right: -2rem;
}

.c2 {
  overflow-x: auto;
}

.c0 {
  overflow-x: auto;
  background: #e5f1fe;
}

.c3 {
  margin: 0;
  padding: 0;
  list-style-type: none;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-flow: nowrap;
  -ms-flex-flow: nowrap;
  flex-flow: nowrap;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 0.625rem 0;
}

.c4 {
  display: inline-block;
  padding: 0.625rem 1.25rem;
  white-space: nowrap;
}

.c5 {
  display: block;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  pointer-events: none;
}

.c6 {
  display: block;
  width: 1rem;
  color: #005994;
}

@media (max-width:600px) {
  .c3 {
    padding: 0.5rem 0;
  }
}

<div>
  <nav
    class="c0"
  >
    <div
      class="c1"
    >
      <div
        class="c2"
      >
        <ul
          class="c3"
        >
          <li
            class="c4"
          >
            <a
              href="/"
              title="Retour à l'accueil"
            >
              Accueil
            </a>
          </li>
          <li
            aria-hidden="true"
            class="c5"
          >
            <svg
              class="c6"
              fill="none"
              height="24"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <polyline
                points="13 17 18 12 13 7"
              />
              <polyline
                points="6 17 11 12 6 7"
              />
            </svg>
          </li>
          <li
            class="c4"
          >
            <a
              href="/themes/theme-1"
              title="Voir le theme theme 1"
            >
              theme 1
            </a>
          </li>
          <li
            aria-hidden="true"
            class="c5"
          >
            <svg
              class="c6"
              fill="none"
              height="24"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <polyline
                points="13 17 18 12 13 7"
              />
              <polyline
                points="6 17 11 12 6 7"
              />
            </svg>
          </li>
          <li
            class="c4"
          >
            <a
              href="/themes/theme-2"
              title="Voir le theme theme 2"
            >
              theme 2
            </a>
          </li>
          <li
            aria-hidden="true"
            class="c5"
          >
            <svg
              class="c6"
              fill="none"
              height="24"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <polyline
                points="13 17 18 12 13 7"
              />
              <polyline
                points="6 17 11 12 6 7"
              />
            </svg>
          </li>
          <li
            class="c4"
          >
            <span
              title="voir le contenu du thème title theme"
            >
              title theme
            </span>
          </li>
        </ul>
      </div>
    </div>
  </nav>
</div>
`;

exports[`<ThemeBreadcrumbs /> should render nothing 1`] = `<div />`;
